--- a/index.html
+++ b/index.html
@@ -311,9 +311,9 @@
                                 </svg>
                                 4.9
                             </span>
-                            <span class="product-count">55000 buchów</span>
+                            <span class="product-count">50000 buchów</span>
                         </div>
-                        <h3 class="product-title">JNR MegaBox Pro</h3>
+                        <h3 class="product-title">JNR MegaBox Pro 50K</h3>
                         <p class="product-subtitle">Jednorazowy e-papieros</p>
                         <a href="https://www.dbucha.com/products/jednorazowki-jnr-megabox-pro-50k-buchow"
                             class="product-cta">Kup Teraz</a>
@@ -339,7 +339,7 @@
                             </span>
                             <span class="product-count">120000 buchów</span>
                         </div>
-                        <h3 class="product-title">JNR Quads 4-w-1</h3>
+                        <h3 class="product-title">JNR Quads 120K</h3>
                         <p class="product-subtitle">Jednorazowy e-papieros</p>
                         <a href="https://www.dbucha.com/products/jednorazowki-jnr-quads-120k-buchow"
                             class="product-cta">Kup Teraz</a>
@@ -364,7 +364,7 @@
                             </span>
                             <span class="product-count">55000 buchów</span>
                         </div>
-                        <h3 class="product-title">JNR Rage Gorilla</h3>
+                        <h3 class="product-title">JNR Rage Gorilla 55K</h3>
                         <p class="product-subtitle">Jednorazowy e-papieros</p>
                         <a href="https://www.dbucha.com/products/jnr-ragegorilla-55k-buchow" class="product-cta">Kup
                             Teraz</a>
@@ -457,7 +457,7 @@
                             </span>
                             <span class="product-count">9000 buchów</span>
                         </div>
-                        <h3 class="product-title">Fumot T9000</h3>
+                        <h3 class="product-title">Fumot T9000 9K</h3>
                         <p class="product-subtitle">Jednorazowy e-papieros</p>
                         <a href="https://www.dbucha.com/products/fumot-t9000-buchow" class="product-cta">Kup Teraz</a>
                     </div>
@@ -600,7 +600,7 @@
                             </span>
                             <span class="product-count">20000 buchów</span>
                         </div>
-                        <h3 class="product-title">Adalya ADL PRO360</h3>
+                        <h3 class="product-title">Adalya ADL PRO360 20K</h3>
                         <p class="product-subtitle">Jednorazowy e-papieros</p>
                         <a href="https://www.dbucha.com/products/jednorazowki-adalya-adl-pro360-20k-buchow"
                             class="product-cta">Kup Teraz</a>
@@ -745,7 +745,7 @@
                             </span>
                             <span class="product-count">8000 buchów</span>
                         </div>
-                        <h3 class="product-title">Crown Bar Pro 8000</h3>
+                        <h3 class="product-title">Crown Bar Pro 8000 8K</h3>
                         <p class="product-subtitle">Jednorazowy e-papieros</p>
                         <a href="https://www.dbucha.com/products/al-fakher-crown-bar-pro-8000-buchow"
                             class="product-cta">Kup Teraz</a>
